--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    <b><a href="https://sp2026.ieee-security.org">Symposium on Security and Privacy</a>, IEEE SP (Oakland)</b>
+    (<b>Associate PC Chair</b> in <a href="https://sp2026.ieee-security.org">2026</a>,
+     also PC Member in <a href="https://www.ieee-security.org/TC/SP2021/">2020</a>)
+  <ul>
+  <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> submission deadlines: 5 June 2025 and 13 November 2025</li>
+  <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> symposium: TBD</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io">Roberto "Rob" Blanco</a></b>, currently PostDoc in my group, will start as Associate Professor at <a href="">TU Eindhoven</a> in April 2025.</li>
+
+  <li style="margin-bottom: 1ex;">
     <b><a href="https://icfp25.sigplan.org">International Conference on Functional Programming</a>, ICFP</b>
     (PC Member in <a href="https://icfp25.sigplan.org">2025</a>)
   <ul>
@@ -154,8 +166,7 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   <ul>
   <!-- <li><a href="https://popl25.sigplan.org/home/CPP-2025">CPP 2025</a> abstract deadline: 10 September 2024</li> -->
   <!-- <li><a href="https://popl25.sigplan.org/home/CPP-2025">CPP 2025</a> submission deadline: 17 September 2024</li> -->
-  <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <li><a href="https://popl25.sigplan.org/home/CPP-2025">CPP 2025</a> conference: 20-21 January 2025, Denver, Colorado, USA (with <a href="https://popl25.sigplan.org">POPL</a>)</li>
+  <li><a href="https://popl26.sigplan.org">CPP 2026</a> conference: 11-17 January 2026, Rennes, France (with <a href="https://popl26.sigplan.org">POPL</a>)</li>
   </ul>
   </li>
 
@@ -181,7 +192,7 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   <ul>
   <!-- <li><a href="https://popl25.sigplan.org/">PriSC 2025</a> submission deadline: 18 November 2024</li> -->
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <li><a href="https://popl25.sigplan.org/">PriSC 2025</a> workshop: 20 January 2025, Denver, Colorado, USA (with <a href="https://popl25.sigplan.org/">POPL</a>)</li>
+  <li><a href="https://popl26.sigplan.org/">PriSC 2026</a> workshop: 11-17 January 2025, Rennes, France (with <a href="https://popl26.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
 
@@ -193,18 +204,6 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://web.archive.org/web/20240621065705/https://perso.ens-lyon.fr/adrien.durier">Adrien Durier</a></b>, former PostDoc in my group, started as Associate Professor (Maître de Conférences) at <a href="https://www.universite-paris-saclay.fr/en/education/master/computer-science">Université Paris-Saclay</a> and <a href="https://lmf.cnrs.fr/Main/HomePage?lang=en">LMF</a> in September 2023.</li>
 
-  <li style="margin-bottom: 1ex;">
-    <b><a href="https://popl24.sigplan.org/series/POPL">Principles of Programming Languages</a>, POPL</b>
-    (<b>Artifact Evaluation Chair</b> in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
-     also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>)
-  <ul>
-  <!-- <li>Abstract deadline: 1 July 2017</li> -->
-  <!-- <li>Submission deadline: 11 July 2024</li> -->
-  <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <li><a href="https://popl25.sigplan.org">POPL 2025</a> symposium: 19-25 January 2025, Denver, Colorado, USA</li>
-  </ul>
-  </li>
-
   <!-- <li style="margin-bottom: 1ex;"><b>Open position: -->
   <!-- <a href="https://groups.google.com/g/fstar-mailing-list/c/N6L2tl3Axt8">Looking for PostDoc on Program Verification Techniques in F* and Coq</a></b> -->
   <!-- </li> -->
@@ -214,6 +213,17 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
   <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, graduated PhD student I co-supervised at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, started as Assistant Prof. at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in Jan 2023.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>, co-supervised <!-- PhD --> student at CIFASIS-CONICET and UNR, Argentina, started as a Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in Jan 2023.</li>
+
+  <li style="margin-bottom: 1ex;">
+    <b><a href="https://popl24.sigplan.org/series/POPL">Principles of Programming Languages</a>, POPL</b>
+    (<b>Artifact Evaluation Chair</b> in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
+     also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>)
+  <ul>
+  <!-- <li>Abstract deadline: 1 July 2017</li> -->
+  <li>Submission deadline: TBD July 2025</li>
+  <!-- <li>Early registration deadline: 14 December 2023</li> -->
+  <li><a href="https://popl26.sigplan.org/">POPL 2026</a> symposium: 11-17 January 2025, Rennes, France</ul>
+  </li>
 
   <!-- <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, graduated PhD student I supervised at -->
   <!-- MPI-SP<\!-- (and before that Inria Paris) -\->, took a Formal Verification Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li> -->
@@ -227,14 +237,6 @@ PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
 
   <!-- <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a></b> for<br/> -->
   <!-- <a href="https://github.com/SSProve/ssprove">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a> -->
-  <!-- </li> -->
-
-  <!-- <li style="margin-bottom: 1ex;"> -->
-  <!-- <b><a href="https://www.ieee-security.org/TC/SP2021/">IEEE Symposium on Security and Privacy, Oakland S&amp;P 2021</a></b> (PC Member) -->
-  <!-- <ul> -->
-  <!-- <\!-- <li><b>Submission deadlines(!): <strike>4 June 2020, 3 September 2020,</strike> 3 December 2020</b></li> -\-> -->
-  <!-- <\!-- <li>Conference: 23-27 May 2021, Online</li> -\-> -->
-  <!-- </ul> -->
   <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><b><a href="https://cezarandrici.com">Cezar Constantin-Andrici</a></b> won 1st prize at the Student Research Competition of <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition#Results">ICFP 2020</a> <\!-- (graduates section) -\-></li> -->
@@ -818,7 +820,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><em>My Journey in Secure Compilation</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">Programming Languages Mentoring Workshop @ POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a> (2025-01-21)</li>
+      <li><b>Recent:</b> <a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">Programming Languages Mentoring Workshop @ POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a>, <b><a href="https://youtu.be">video</a></b> (2025-01-21)</li>
     </ul>
 
     <ul style="font-size: small">
@@ -902,35 +904,6 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a>
-
-    <ul style="font-size: small">
-      <li><a href="https://www.nomadic-labs.com/">Nomadic Labs Paris</a> (<a href="https://tezos.com">Tezos</a>): <a href="talks/fstar_tezos_nov_2018/out/fstar-tezos.html">slides</a>, <b><a href="https://youtu.be/SPCko8ACB0M">video</a></b> (2018-11-14)</li>
-      <li><b>Invited Keynote Talk</b> at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
-      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
-    </ul>
-
-  </li>
-
-  <li style="margin-bottom: 1ex"><em>What is secure compilation?</em>
-    <ul style="font-size: small">
-      <li>Discussion at <a href="https://www.dagstuhl.de/en/program/calendar/semhp/?semnr=18201">Dagstuhl Seminar on Secure Compilation</a>:
-          <a href="talks/2018-05-14-Secure-Compilation-Goals-and-Attackers-Dagstuhl.pdf">slides</a> (2018-05-14)
-      </li>
-      <li>Short talk at <a href="https://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting (SCM)</a>:
-          <a href="talks/2017-01-15-What-Is-Secure-Compilation-SCM.pdf">slides</a> (2017-01-15)
-      </li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><em><a href="https://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC'18</a></em></a>
-
-    <ul style="font-size: small">
-      <li>Program Chair's Welcome Message: <a href="https://popl18.sigplan.org/event/prisc-2018-prisc-welcome">slides</a> (2018-01-13)</li>
-    </ul>
-
-  </li>
-
   <!-- <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a> -->
 
   <!--   <ul style="font-size: small"> -->
@@ -999,38 +972,6 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/epit2018/">Program Verification with F*</a></b> course at<br/> <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</a>, 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/aarhus2017/">Verifying Cryptographic Implementations with F*</a></b> at<br/> <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school. Aarhus, Denmark, October<!-- 2-4 -->, 2017
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/nancy2017/">Verifying Cryptographic Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/proofschool/">Models and Tools for Cryptographic Proofs</a> summer school, Nancy, France, <!-- 10-13 --> July 2017
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/mpri-jan2017/">Program Verification with F*</a></b> at the <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, Romania, September 2016
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, <!-- 16-27 --> March 2015
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://fstar-lang.org/tutorial/">F* tutorial</a></b>
-    <ul style="font-size: small">
-
-      <li><a href="http://cufp.org/2015/">
-          Commercial Users of Functional Programming (CUFP)</a> (2015-09-04)
-      </li>
-
-      <li><a href="http://popl.mpi-sws.org/2015/tutorials2.html#t2">
-          Symposium on Principles of Programming Languages (POPL)</a> (2015-01-13)
-      </li>
-
-      <li><a href="teaching/paris2014/wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014.html">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (2014-11-26 and 27)
-      </li>
-
-    </ul>
-  </li>
 
 </ul>
 
