--- a/teaching.html
+++ b/teaching.html
@@ -38,10 +38,10 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/mpri-jan2017/">Program Verification with F*</a></b> at the <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, September 2016
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/bucharest-school-2016/">Verifying Cryptographic Protocol Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/cryptoschool/">Computer Aided Analysis of Cryptographic Protocols</a> summer school, Bucharest, Romania, September 2016
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, 16-27 March 2015
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/talks/fstar-sb-2015/">F* Course: Type Systems for Security Verification</a></b>, Saarland University, <!-- 16-27 --> March 2015
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://fstar-lang.org/tutorial/">F* tutorial</a></b>
@@ -55,7 +55,7 @@
           Symposium on Principles of Programming Languages (POPL)</a> (2015-01-13)
       </li>
 
-      <li><a href="https://wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (2014-11-26 and 27)
+      <li><a href="teaching/paris2014/wiki.inria.fr/prosecco/The_Joint_EasyCrypt-F*-CryptoVerif_School_2014.html">The Joint EasyCrypt-F*-CryptoVerif School 2014</a> (2014-11-26 and 27)
       </li>
 
     </ul>
