--- a/index.html
+++ b/index.html
@@ -605,6 +605,17 @@ I am very fortunate to work with a group of outstanding students and starting re
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Roberto Blanco,
+    Léon Ducruet,
+    Sebastian Harwig, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href=""></a></b>. Submitted to CSF'25. Draft from Feb 2025.
+    <ul style="font-size: small">
+      <li><a href="https://nce.mpi-sp.org/index.php/s/nggS2PMEWa5gynJ">Rocq development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Jérémy Thibault,
     Roberto Blanco,
     Dongjae Lee,
