--- a/index.html
+++ b/index.html
@@ -609,7 +609,8 @@ I am very fortunate to work with a group of outstanding students and starting re
     Léon Ducruet,
     Sebastian Harwig, and
     C&#259;t&#259;lin Hri&#539;cu.
-    <b><a href=""></a></b>. Submitted to CSF'25. Draft from Feb 2025.
+    <b><a href="">FSLH: Flexible Mechanized Speculative Load Hardening</a></b>.
+    Submitted to CSF'25. Draft from Feb 2025.
     <ul style="font-size: small">
       <li><a href="https://nce.mpi-sp.org/index.php/s/nggS2PMEWa5gynJ">Rocq development</a></li>
     </ul>
