--- a/group.html
+++ b/group.html
@@ -70,7 +70,8 @@
   <li style="margin-bottom: 1ex;"><b><a href="">Léon Ducruet</a></b> (Research Intern, ENS Lyon)</li>
   <!-- starting in Sept 2024 -->
 
-  <li style="margin-bottom: 1ex;"><a href="">Basile Schlosser</a> (Research Intern, ENS Paris-Saclay) -- starting in February 2025</li>
+  <li style="margin-bottom: 1ex;"><a href="">Basile Schlosser</a> (Research Intern, ENS Paris-Saclay)</li>
+  <!-- started in February 2025 -->
 
   <li style="margin-bottom: 1ex;"><a href="">Jonathan Baumann</a> (Research Intern, ENS Paris-Saclay) -- starting in April 2025</li>
 
