--- a/index.html
+++ b/index.html
@@ -587,7 +587,8 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="">Léon Ducruet</a> (Research Intern, ENS Lyon)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Basile Schlosser</a> (Research Intern, ENS Paris-Saclay) -- starting in February 2025</li>
+  <li style="margin-bottom: 1ex;"><a href="">Basile Schlosser</a> (Research Intern, ENS Paris-Saclay)</li>
+  <!-- started in February 2025 -->
 
   <li style="margin-bottom: 1ex;"><a href="">Jonathan Baumann</a> (Research Intern, ENS Paris-Saclay) -- starting in April 2025</li>
 
