--- a/index.html
+++ b/index.html
@@ -592,6 +592,8 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="">Jonathan Baumann</a> (Research Intern, ENS Paris-Saclay) -- starting in April 2025</li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim (PostDoc) -- starting in April 2025, hopefully</li>
+
   <li style="margin-bottom: 1ex;"><a href="">Julay Leatherman-Brooks</a> (Research Intern, Portland State University) -- starting in July 2025</li>
 
 </ul>
