--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 <a href="#misc">Misc</a>
 </p>
 
-<h2 id="students">Looking for PostDoc</h2>
+<!-- <h2 id="students">Looking for PostDoc</h2> -->
 
-<p style="width:40em; text-align: left">
-<b><a href="https://groups.google.com/g/fstar-mailing-list/c/VxpowARK248">Postdoctoral
-Researcher position available</a></b> in my <a href="#group">Formally Verified Security group</a> at
-<a href="https://www.mpi-sp.org">MPI-SP</a>. Looking for candidates
-with excellent research track record and publications at top conferences in
-PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p>
+<!-- <p style="width:40em; text-align: left"> -->
+<!-- <b><a href="https://groups.google.com/g/fstar-mailing-list/c/VxpowARK248">Postdoctoral -->
+<!-- Researcher position available</a></b> in my <a href="#group">Formally Verified Security group</a> at -->
+<!-- <a href="https://www.mpi-sp.org">MPI-SP</a>. Looking for candidates -->
+<!-- with excellent research track record and publications at top conferences in -->
+<!-- PL (e.g., POPL and ICFP) and/or security (e.g., CCS and CSF).</p> -->
 <!-- programming languages -->
 
 <!-- We are looking for talented, highly motivated students and young -->
