--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><em>My Journey in Secure Compilation</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">Programming Languages Mentoring Workshop @ POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a>, <b><a href="https://youtu.be">video</a></b> (2025-01-21)</li>
+      <li><b>Recent:</b> <a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">Programming Languages Mentoring Workshop @ POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a>, <b><a href="https://www.youtube.com/live/wUT4b2dUU78?si=q8Lr3iOoVz9bmoCl&t=13257">video</a></b> (2025-01-21)</li>
     </ul>
 
     <ul style="font-size: small">
