--- a/index.html
+++ b/index.html
@@ -607,6 +607,21 @@ I am very fortunate to work with a group of outstanding students and starting re
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Cezar-Constantin Andrici,
+    Danel Ahman,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Ruxandra Icleanu,
+    Guido Martínez
+    Exequiel Rivas, and
+    Théo Winterhalter.
+    <b><a href="">SecRef*: Securely Sharing Mutable References Between Verified and Unverified Code in F*</a></b>.
+    Submitted to ICFP'25. Draft from Feb 2025.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/andricicezar/fstar-io/tree/master/state">F* development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Roberto Blanco,
     Léon Ducruet,
     Sebastian Harwig, and
