--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Guido Martínez
     Exequiel Rivas, and
     Théo Winterhalter.
-    <b><a href="">SecRef*: Securely Sharing Mutable References Between Verified and Unverified Code in F*</a></b>.
+    <b><a href="http://arxiv.org/abs/2503.00404">SecRef*: Securely Sharing Mutable References Between Verified and Unverified Code in F*</a></b>.
     Submitted to ICFP'25. Draft from Feb 2025.
     <ul style="font-size: small">
       <li><a href="https://github.com/andricicezar/fstar-io/tree/master/state">F* development</a></li>
