--- a/index.html
+++ b/index.html
@@ -607,6 +607,14 @@ I am very fortunate to work with a group of outstanding students and starting re
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Jérémy Thibault,
+    Joseph Lenormand, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
+    Submitted to ITP'25. Draft from Mar 2025.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
     Danel Ahman,
     C&#259;t&#259;lin Hri&#539;cu,
