--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Jérémy Thibault,
     Joseph Lenormand, and
     C&#259;t&#259;lin Hri&#539;cu.
-    <b><a href="">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
+    <b><a href="http://arxiv.org/abs/2503.19609">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
     Submitted to ITP'25. Draft from March 2025.
   </li>
 
