--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   </li>
 
   <!-- <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, graduated PhD student I supervised at -->
-  <!-- MPI-SP<\!-- (and before that Inria Paris) -\->, took a Formal Verification Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li> -->
-
+  <!-- MPI-SP<\!-- (and before that Inria Paris) -\->, took a Formal Verification Researcher position at the <a href="https://www.barkhauseninstitut.org">Barkhausen Institut</a> in Dresden, starting in May 2022.</li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></b>, December 2021 (Organizer) -->
   <!-- <\!-- <ul> -\->  -->
