--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Sebastian Harwig, and
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a></b>.
-    Submitted to CSF'25. Draft from February 2025.
+    Accepted at CSF'25. Draft from February 2025.
     <ul style="font-size: small">
       <li><a href="https://nce.mpi-sp.org/index.php/s/nggS2PMEWa5gynJ">Rocq development</a></li>
     </ul>
