--- a/group.html
+++ b/group.html
@@ -18,7 +18,7 @@
 
 <h1>C&#259;t&#259;lin Hri&#355;cu</h1>
 
-<h2>Current Research Group</h2>
+<h2>Current Research Group on Formally Verified Security</h2>
 
 <ul style="width:42em; text-align: left">
 
@@ -62,26 +62,52 @@
     <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2018-01 to 2020-04:<br/>
       <a href="https://arxiv.org/abs/1802.00588">Formally Secure Compilation Despite Dynamic Compromise</a></li>
   </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [Will start as Associate Professor at TU Eindhoven in May 2025]
+  </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/sharwig">Sebastian Harwig</a></b> (Research Student Assistant, RUB)</li>
-   <!-- started in April 2024 -->
-
-  <li style="margin-bottom: 1ex;"><b><a href="">Léon Ducruet</a></b> (Research Intern, ENS Lyon)</li>
-  <!-- starting in Sept 2024 -->
-
-  <li style="margin-bottom: 1ex;"><a href="">Basile Schlosser</a> (Research Intern, ENS Paris-Saclay)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="">Basile Schlosser</a></b> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in February 2025 -->
 
-  <li style="margin-bottom: 1ex;"><a href="">Jonathan Baumann</a> (Research Intern, ENS Paris-Saclay) -- starting in April 2025</li>
+  <li style="margin-bottom: 1ex;"><b><a href="">Jonathan Baumann</a></b> (Research Intern, ENS Paris-Saclay)</li>
+  <!-- started in April 2025 -->
 
-  <li style="margin-bottom: 1ex;"><a href="">Julay Leatherman-Brooks</a> (Research Intern, Portland State University) -- starting in July 2025</li>
+  <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a> (Postdoctoral Researcher, MPI-SP) -- starting in May 2025</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a> (Research Intern, Portland State University) -- starting in July 2025</li>
 </ul>
 
 
 <h2>Past Group Members</h2>
 
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><b><a href="">Léon Ducruet</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-06 to 2024-09:<br/>
+     <a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a>
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [MSc Student at ENS Lyon] [Now intern at Aarhus University]
+  </div>
+  </li>
+
+  <!-- starting in Sept 2024 -->
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/sharwig">Sebastian Harwig</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">Teaching Assistant Student at RUB and <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-10 to 2025-03:<br/>
+    <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=60387">Proofs are Programs</a> course at RUB.
+    </li>
+    <li style="margin-top: 1ex;">Research Assistant Student at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-04 to 2024-09<br/>
+      <a href="http://arxiv.org/abs/2502.03203">Rocq speculative constant time and relative security proofs</a></li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [MSc Student at RUB]
+  </div>
+  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a></b>
   <ul>
