--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
     <b><a href="https://icfp25.sigplan.org">International Conference on Functional Programming</a>, ICFP</b>
     (PC Member in <a href="https://icfp25.sigplan.org">2025</a>)
   <ul>
-  <li><a href="https://icfp25.sigplan.org">ICFP 2025</a> submission deadline: 27 February 2025</li>
+  <!-- <li><a href="https://icfp25.sigplan.org">ICFP 2025</a> submission deadline: 27 February 2025</li> -->
   <li><a href="https://icfp25.sigplan.org">ICFP 2025</a> conference: 12-18 October 2025, Singapore
     (co-located with <a href="https://conf.researchr.org/home/icfp-splash-2025">SPLASH</a>)</li>
   </ul>
