--- a/group.html
+++ b/group.html
@@ -70,7 +70,7 @@
   <li style="margin-bottom: 1ex;"><b><a href="">Basile Schlosser</a></b> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in February 2025 -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="">Jonathan Baumann</a></b> (Research Intern, ENS Paris-Saclay)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://jonathan.baumann.zip">Jonathan Baumann</a></b> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in April 2025 -->
 
   <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a> (Postdoctoral Researcher, MPI-SP) -- starting in May 2025</li>
