--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><a href="">Basile Schlosser</a> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in February 2025 -->
 
-  <li style="margin-bottom: 1ex;"><a href="">Jonathan Baumann</a> (Research Intern, ENS Paris-Saclay)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://jonathan.baumann.zip/">Jonathan Baumann</a> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in April 2025 -->
 
   <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a> (Postdoctoral Researcher, MPI-SP) -- starting in May 2025</li>
