--- a/index.html
+++ b/index.html
@@ -580,11 +580,11 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto (Rob) Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Basile Schlosser</a> (Research Intern, ENS Paris-Saclay)</li>
-  <!-- started in February 2025 -->
-
   <li style="margin-bottom: 1ex;"><a href="https://jonathan.baumann.zip/">Jonathan Baumann</a> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in April 2025 -->
+
+  <li style="margin-bottom: 1ex;"><a href="">Basile Schlosser</a> (Research Intern, ENS Paris-Saclay)</li>
+  <!-- started in February 2025 -->
 
   <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a> (Postdoctoral Researcher, MPI-SP) -- starting in May 2025</li>
 
@@ -607,6 +607,9 @@ I am very fortunate to work with a group of outstanding students and starting re
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="http://arxiv.org/abs/2503.19609">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
     Submitted to ITP'25. Draft from March 2025.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/nanopass-bt">Rocq development</a></li>
+    </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">
