--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,18 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Roberto Blanco,
+    Léon Ducruet,
+    Sebastian Harwig, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a></b>.
+    Accepted at CSF'25. Draft from February 2025.
+    <ul style="font-size: small">
+      <li><a href="https://nce.mpi-sp.org/index.php/s/nggS2PMEWa5gynJ">Rocq development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Jérémy Thibault,
     Roberto Blanco,
     Dongjae Lee,
@@ -516,7 +528,7 @@
 
 <h3>Journal Papers</h3>
 
-<ol id="journal" start="35" style="width:42em; text-align: left">
+<ol id="journal" start="36" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
     Philipp G. Haselwarter, 
@@ -619,7 +631,8 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Books</h3>
-<ol start="42" style="width:42em; text-align: left">
+<ol start="43" style="width:42em; text-align: left">
+  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu and Roberto Blanco. <b><a href="https://mpi-sp-foe-2025.github.io/book-secf/">Software Foundations: Security Foundations</a></b>, Draft textbook, April 2025.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a></b>, Electronic textbook, August 2018.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
@@ -747,6 +760,32 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 <h3>Drafts, Informal Publications, and Workshops</h3>
 <ol start="52" style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;">
+    Jérémy Thibault,
+    Joseph Lenormand, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="http://arxiv.org/abs/2503.19609">Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs</a></b>.
+    Submitted to ITP'25. Draft from March 2025.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/nanopass-bt">Rocq development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Cezar-Constantin Andrici,
+    Danel Ahman,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Ruxandra Icleanu,
+    Guido Martínez
+    Exequiel Rivas, and
+    Théo Winterhalter.
+    <b><a href="http://arxiv.org/abs/2503.00404">SecRef*: Securely Sharing Mutable References Between Verified and Unverified Code in F*</a></b>.
+    Submitted to ICFP'25. Draft from February 2025.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/andricicezar/fstar-io/tree/master/state">F* development</a></li>
+    </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;">
     Roberto Blanco,
