--- a/index.html
+++ b/index.html
@@ -982,6 +982,11 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <h2 id="teaching">Teaching</h2>
 
+<p style="width:42em; text-align: left"> Co-author of 3 volumes of the <a href="https://softwarefoundations.cis.upenn.edu/">Software Foundations</a> textbook:
+    <a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Logical Foundations</a>,
+    <a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Programming Language Foundations</a>, and
+    <b><a href="https://mpi-sp-foe-2025.github.io/book-secf/">Security Foundations</a> (draft, main author)</b>.</p>
+
 <p>Here are my recent courses. For a complete list of my teaching please look <a href="teaching.html">here</a>.
 
 <ul style="width:42em; text-align: left">
