--- a/publications.html
+++ b/publications.html
@@ -514,9 +514,9 @@
 
   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <b><a href="publications/zk-types-ccs2008.pdf">Type-checking Zero-knowledge</a></b>. In <a href="http://www.sigsac.org/ccs/CCS2008/">15th ACM Conference on Computer and Communications Security (CCS 2008)</a>, pages 357-370, ACM Press, October 2008.
   <ul style="font-size: small">
-    <li><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker/">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#539;cu, May 2011.</li>
+    <li><a href="https://web.archive.org/web/20160831071710/http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#539;cu, May 2011.</li>
     <li><a href="publications/zk-types-full.pdf">Full version</a> that additionally contains all the technical details of the type system, a brief discussion about security despite compromise, and all the proofs, November 2008.</li>
-    <li>Implementation of the <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker/">type-checker for zero-knowledge</a> by Stefan Lorenz, Kim Pecina, C&#259;t&#259;lin Hri&#539;cu, and Thorsten Tarrach, September 2008.</li>
+    <li>Implementation of the <a href="https://web.archive.org/web/20160831071710/http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">type-checker for zero-knowledge</a> by Stefan Lorenz, Kim Pecina, C&#259;t&#259;lin Hri&#539;cu, and Thorsten Tarrach, September 2008.</li>
     <li>A <a href="publications/typing-zk-wits-final.pdf">preliminary version</a> of this paper was presented at <a href="http://profs.sci.univr.it/~vigano/fcs-arspa-wits08/">FCS-ARSPA-WITS'08</a>, June 2008.</li>
   </ul>
   </li>
@@ -709,7 +709,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="http://scidok.sulb.uni-saarland.de/volltexte/2012/4800/pdf/catalin_phd_2012_03_24_final.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Security Protocol Analysis</a></b>. PhD Thesis, <!--Advisors: Michael Backes, Matteo Maffei, and Andrew D. Gordon (MSR)--> Saarland University, <!--Saarbr&uuml;cken. Submitted: 14 November 2011. Defended: 10 January 2012. Published: 29 March 2012--> Jan 2012.
   <ul style="font-size: small">
-    <li>Coq formalizations, implementations, samples, and further details available on the pages of <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">the Zero-knowledge Type-checker</a> and of <a href="https://web.archive.org/web/20160831071710/http://www.infsec.cs.uni-saarland.de/projects/F5">the F5 Toolchain for RCF</a>.</li>
+    <li>Coq formalizations, implementations, samples, and further details available on the pages of <a href="https://web.archive.org/web/20160831071710/http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">the Zero-knowledge Type-checker</a> and of <a href="https://web.archive.org/web/20160831071710/http://www.infsec.cs.uni-saarland.de/projects/F5">the F5 Toolchain for RCF</a>.</li>
     </ul>
     </li>
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <a href="http://hritcu.wordpress.com/publications/masters-thesis/">Step-indexed Semantic Model of Types for the Functional Object Calculus</a>. Master's Thesis, Saarland University, Saarbr&uuml;cken, Germany, May 2007.
