--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
      also PC Member in <a href="https://www.ieee-security.org/TC/SP2021/">2020</a>)
   <ul>
   <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> submission deadlines: 5 June 2025 and 13 November 2025</li>
-  <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> symposium: TBD</li>
+  <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> symposium: 18-21 May 2026 in San Francisco</li>
   </ul>
   </li>
 
