--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
     (<b>Associate PC Chair</b> in <a href="https://sp2026.ieee-security.org">2026</a>,
      also PC Member in <a href="https://www.ieee-security.org/TC/SP2021/">2020</a>)
   <ul>
+  <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> abstract deadlines: 29 May 2025 and 6 November 2025</li>
   <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> submission deadlines: 5 June 2025 and 13 November 2025</li>
   <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> symposium: 18-21 May 2026 in San Francisco</li>
   </ul>
