--- a/index.html
+++ b/index.html
@@ -856,7 +856,8 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><em>My Group's Journey in Secure Compilation</em></a>
     <ul style="font-size: small">
-      <li><b>Upcoming</b> <a href="">Inaugural Lecture</a> as Adjunct Professor (APL) in the <a href="https://informatik.rub.de/en/">CS Faculty</a>
+      <li><b>Upcoming:</b> <a href="https://informatik.rub.de/antrittsvorlesung-catalin-hritcu/">Inaugural Lecture</a>
+        as Adjunct Professor (APL) in the <a href="https://informatik.rub.de/en/">CS Faculty</a>
 of <a href="https://www.ruhr-uni-bochum.de/en">RUB</a>
        <!-- a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a --> (2025-04-30)</li>
       <li><b>Recent invited talk at</b> <a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">Programming Languages Mentoring Workshop@POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a>, <b><a href="https://www.youtube.com/live/wUT4b2dUU78?si=q8Lr3iOoVz9bmoCl&t=13257">video</a></b> (2025-01-21)</li>
