--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    <b><a href="https://sp2026.ieee-security.org">Symposium on Security and Privacy</a>, IEEE SP (Oakland)</b>
+    <b><a href="https://sp2026.ieee-security.org">IEEE Symposium on Security and Privacy</a></b>
     (<b>Associate PC Chair</b> in <a href="https://sp2026.ieee-security.org">2026</a>,
-     also PC Member in <a href="https://www.ieee-security.org/TC/SP2021/">2020</a>)
+     <br/>also PC Member in <a href="https://www.ieee-security.org/TC/SP2021/">2020</a>)
   <ul>
   <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> abstract deadlines: 29 May 2025 and 6 November 2025</li>
   <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> submission deadlines: 5 June 2025 and 13 November 2025</li>
@@ -856,10 +856,10 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><em>My Group's Journey in Secure Compilation</em></a>
     <ul style="font-size: small">
-      <li><b>Upcoming:</b> <a href="https://informatik.rub.de/antrittsvorlesung-catalin-hritcu/">Inaugural Lecture</a>
+      <li><b>Recent:</b> <a href="https://informatik.rub.de/antrittsvorlesung-catalin-hritcu/">Inaugural Lecture</a>
         as Adjunct Professor (APL) in the <a href="https://informatik.rub.de/en/">CS Faculty</a>
 of <a href="https://www.ruhr-uni-bochum.de/en">RUB</a>
-       <!-- a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a --> (2025-04-30)</li>
+       <a href="talks/2025-04-30-My-Groups-Journey-in-Secure-Compilation.pdf">slides</a> (2025-04-30)</li>
       <li><b>Recent invited talk at</b> <a href="https://popl25.sigplan.org/home/PLMW-POPL-2025">Programming Languages Mentoring Workshop@POPL'25</a>: <a href="talks/2025-01-21-My-Journey-in-Secure-Compilation.pdf">slides</a>, <b><a href="https://www.youtube.com/live/wUT4b2dUU78?si=q8Lr3iOoVz9bmoCl&t=13257">video</a></b> (2025-01-21)</li>
       <li><a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense @ Inria Paris</a>: <a href="talks/2019-01-29-Secure-Compilation-Habil.pdf">slides</a> (2019-01-29)</li>
       <li><b>Invited Keynote talk</b> at <a href="https://fmse.info.uaic.ro/event/from-2018/">Working Formal Methods Symposium (FROM 2018)</a>: <a href="talks/2018-06-20-Secure-Compilation-FROM.pdf">slides</a> (2018-06-20)</li>
