--- a/group.html
+++ b/group.html
@@ -56,16 +56,21 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a> since 2020-05:<br/>
+    <li style="margin-top: 1ex;">Visitor at <a href="https://www.mpi-sp.org/">MPI-SP</a>, since 2025-05
+    </li>
+    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2020-05 to 2025-04<br/>
     <a href="https://secure-compilation.github.io">Formally Secure Compilation</a> and Formal Methods for Side-Channel Secure Hardware
     </li>
     <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2018-01 to 2020-04:<br/>
       <a href="https://arxiv.org/abs/1802.00588">Formally Secure Compilation Despite Dynamic Compromise</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [Will start as Associate Professor at TU Eindhoven in May 2025]
+  [Started as Associate Professor at TU Eindhoven in May 2025]
   </div>
   </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a></b> (Postdoctoral Researcher, MPI-SP)</li>
+  <!-- started in May 2025 -->
 
   <li style="margin-bottom: 1ex;"><b><a href="">Basile Schlosser</a></b> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in February 2025 -->
@@ -73,7 +78,6 @@
   <li style="margin-bottom: 1ex;"><b><a href="https://jonathan.baumann.zip">Jonathan Baumann</a></b> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in April 2025 -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a> (Postdoctoral Researcher, MPI-SP) -- starting in May 2025</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a> (Research Intern, Portland State University) -- starting in July 2025</li>
 </ul>
