--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
-  <!-- <li>Next symposium (<a href="https://csf2024.ieee-security.org">CSF 2024</a>): 8-12 July 2024, Enschede, The Netherlands</li> -->
-  <li><a href="https://csf2025.ieee-security.org">CSF 2025</a> submission deadlines: <strike>28 May 2024, 1 October 2024</strike>, 4 February 2025</li>
+  <li><a href="https://csf2025.ieee-security.org/">CSF 2025</a>: June 16-20, 2025 - Santa Cruz, CA, USA</li>
+  <!-- <li><a href="https://csf2025.ieee-security.org">CSF 2025</a> submission deadlines: <strike>28 May 2024, 1 October 2024</strike>, 4 February 2025</li> -->
   </ul>
   </li>
 
@@ -587,7 +587,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><a href="">Basile Schlosser</a> (Research Intern, ENS Paris-Saclay)</li>
   <!-- started in February 2025 -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a> (Postdoctoral Researcher, MPI-SP) -- starting in May 2025</li>
+  <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a> (Postdoctoral Researcher, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/julayleathermanbrooks/">Julay Leatherman-Brooks</a> (Research Intern, Portland State University) -- starting in July 2025</li>
 
